Add  db-read-write-service url configuration service

--- a/MobyLabWebProgramming.Backend/appsettings.json
+++ b/MobyLabWebProgramming.Backend/appsettings.json
@@ -11,4 +11,7 @@
     "Issuer": "https://my.app",
     "Audience": "https://my.app"
   },
+  "DbReadWriteServiceConfiguration": {
+    "BaseUrl": "http://db-read-write-service"
+  }
 }
